# exam_hub

./: .dockerignore  .env.example  .flake8  .gitignore  .gitlab-ci.yml  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  SKILL.md  USER_GROWTH_PLAN.md  USER_MANUAL.md  app.py  biome.json  cliff.toml  gitleaks.toml  h origin maingit push origin main  knip.json  mailmap.txt  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt
.specify/: constitution.md  init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: codex.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/scripts/powershell/: check-prerequisites.ps1  common.ps1
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
client/: index.html  package-lock.json  package.json
client/src/: App.jsx  index.css
client/src/components/: ExamCard.jsx
client/src/pages/: ExamDetail.jsx  ExamList.jsx
controllers/: examController.js
exam_hub_adk/: __init__.py  agent.py  tools.py
models/: Exam.js
routes/: exams.js
scripts/: check_compliance.py  run_pytest.py
server/: .env.example  db.js  index.js  package-lock.json  package.json  sampleExams.js  seed.js
server/middleware/: errorHandler.js
specs/: exam-hub.md
specs/templates/: plan.md  spec.md  tasks.md
tests/: basic.test.js  test_app.py
