[project]
name = "exam-hub"
version = "0.1.0"
description = "Streamlit app for exploring major Indian competitive exams."
requires-python = ">=3.12"
dependencies = [
  "google-adk",
  "streamlit",
]

[dependency-groups]
dev = [
  "bandit",
  "mypy",
  "pip-audit",
  "pre-commit",
  "pytest",
  "pytest-cov",
  "ruff",
  "ty",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
allowed-confusables = ["۔"]
select = [
  "B",
  "C4",
  "E",
  "F",
  "I",
  "PERF",
  "PIE",
  "RET",
  "RUF",
  "SIM",
  "UP",
]

[tool.ty.environment]
python-version = "3.12"

[tool.mypy]
python_version = "3.12"
files = ["app.py", "exam_hub_adk", "tests", "scripts"]
ignore_missing_imports = true
check_untyped_defs = false
warn_unused_configs = true

[tool.bandit]
exclude_dirs = [".git", ".venv", ".uv-ci-venv", ".uv-verify-venv", ".specify", "tests"]
skips = ["B101"]

[tool.pytest.ini_options]
addopts = "--cov=. --cov-report=term --cov-fail-under=70 --basetemp=.pytest-run-tmp"
testpaths = ["."]
python_files = ["test_*.py", "*_test.py"]
pythonpath = ["."]
norecursedirs = [
  "builds",
  ".git",
  ".pytest-tmp",
  ".pytest_cache",
  ".ruff_cache",
  ".specify",
  ".uv-cache",
  ".uv-verify-venv",
  ".venv",
]
