[project]
name = "exam-hub"
version = "0.1.0"
description = "Streamlit app for exploring major Indian competitive exams."
requires-python = ">=3.12"
dependencies = [
  "google-adk",
  "streamlit",
]

[dependency-groups]
dev = [
  "bandit",
  "flake8",
  "mypy",
  "pip-audit",
  "pre-commit",
  "pylint",
  "pytest",
  "pytest-cov",
  "pyupgrade",
  "ruff",
  "ty",
  "vulture",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
allowed-confusables = ["۔"]
select = [
  "B",
  "C4",
  "E",
  "F",
  "I",
  "PERF",
  "PIE",
  "RET",
  "RUF",
  "SIM",
  "UP",
]

[tool.ty.environment]
python-version = "3.12"

[tool.mypy]
python_version = "3.12"
files = ["app.py", "exam_hub_adk", "tests", "scripts"]
ignore_missing_imports = true
check_untyped_defs = false
warn_unused_configs = true

[tool.bandit]
exclude_dirs = [".git", ".venv", ".uv-ci-venv", ".uv-verify-venv", ".specify", "tests"]
skips = ["B101"]

[tool.pylint.main]
ignore-paths = [
  "^\\.git/",
  "^\\.specify/",
  "^\\.venv/",
  "^\\.uv-ci-venv/",
  "^\\.uv-verify-venv/",
]
jobs = 1
py-version = "3.12"

[tool.pylint.messages_control]
disable = [
  "duplicate-code",
  "broad-exception-caught",
  "consider-using-in",
  "cyclic-import",
  "import-error",
  "import-outside-toplevel",
  "line-too-long",
  "missing-class-docstring",
  "missing-function-docstring",
  "missing-module-docstring",
  "mixed-line-endings",
  "protected-access",
  "too-many-arguments",
  "too-many-branches",
  "too-many-lines",
  "too-many-locals",
  "too-many-positional-arguments",
  "too-many-return-statements",
  "too-many-statements",
  "use-maxsplit-arg",
]

[tool.pylint.reports]
score = false

[tool.vulture]
exclude = [".git/", ".specify/", ".venv/", ".uv-ci-venv/", ".uv-verify-venv/"]
ignore_decorators = ["@st.cache_data"]
min_confidence = 100
paths = ["app.py", "exam_hub_adk", "scripts", "tests"]
sort_by_size = true

[tool.pytest.ini_options]
addopts = "--cov=. --cov-report=term --cov-fail-under=70 --basetemp=.pytest-run-tmp"
testpaths = ["."]
python_files = ["test_*.py", "*_test.py"]
pythonpath = ["."]
norecursedirs = [
  "builds",
  ".git",
  ".pytest-tmp",
  ".pytest_cache",
  ".ruff_cache",
  ".specify",
  ".uv-cache",
  ".uv-cache-*",
  ".uv-verify-venv",
  ".venv",
  ".uv-ci-venv-*",
]
